# doom-eternal-vibe-clone

./: .gitattributes  .gitignore  README.md  asset_lab.html  character_lab.html  index.html  level_editor.html  pyproject.toml  run_server.bat  runtime_asset_lab.html  style.css  texture_lab.html  weapon_lab.html
assets/characters/ember-runt/: ember-runt-authoring.glb  ember-runt-pre-remeshed.glb  ember-runt-rigged.glb  ember-runt-running.glb  ember-runt-walking.glb  material-overrides.json  metadata.json
assets/characters/ember-runt/runtime/: runtime-manifest.json
assets/environment/: README.md  meshy-batch-summary.json
assets/environment/catwalk-center-hub/runtime/: finalize-report.json  runtime-manifest.json
assets/environment/catwalk-center-hub/source/: catwalk-center-hub-meshy-preview.glb  catwalk-center-hub-meshy-refined.glb  catwalk-center-hub-meshy.metadata.json
assets/environment/catwalk-straight-arm/runtime/: finalize-report.json  runtime-manifest.json
assets/environment/catwalk-straight-arm/source/: catwalk-straight-arm-meshy-preview.glb  (+2 more)
assets/levels/: hellrush-arena.json
assets/textures/: manifest.json
assets/weapons/: README.md  manifest.json
src/: app-nav.js  asset-edit-routes.js  editor-transform-gizmo.js  environment-runtime.js  game.js  lab-lighting.js  level-materials.js  level-runtime.js  render-pipeline.js
tools/: __init__.py  authoring_server.py  build_pbr_texture.py  comfy_pbr_texture.py  finalize_character_asset.py  finalize_weapon_asset.py  meshy_character_pipeline.py  meshy_environment_batch.py  meshy_weapon_pipeline.py
(+77 files in other folders)
