[project]
name = "hellrush-authoring"
version = "0.1.0"
description = "Local authoring server for Hellrush labs and static gameplay serving."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0"
]

[project.scripts]
dev = "tools.authoring_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
